Revert back to using ArrayList